# aplikacja

./: README.md  aplikacja.py  pyproject.toml  zapisz.py
