[tool.poetry]
name = "aplikacja-bazy-danych"
version = "0.1.0"
description = "Aplikacja na bazy danych"
authors = ["Hairi43 <tanjiroowo12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simplejson = "^3.19.2"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
